--- a/css/controls.css
+++ b/css/controls.css
@@ -35,7 +35,13 @@
 *    You can contact me at: terryeppler@gmail.com or eppler.terry@epa.gov
 * </copyright>
 * <summary>
-*   controls.css
+*   main properties
+*   
+*   page background - #212020;
+*   image backgroundcolor - #373737;
+*   forecolor - #D6D2D2;
+*   bordercolor - #0078d4;
+*
 * </summary>
 **************************************************************************************************/
 
@@ -48,7 +54,7 @@
     -webkit-user-select: none;
     align-content: stretch;
     align-items: stretch;
-    background-color: #A09898;
+    background-color:  #CBC9C9;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -56,6 +62,7 @@
     justify-content: flex-start;
     text-decoration: none;
     user-select: none;
+    color: #1E1E1E;
 }
 
 .custom-button
@@ -65,12 +72,12 @@
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    background-color: #A09898;
+    background-color:  #CBC9C9;
     border: 1px solid #0078d4;
     border-radius: 2px;
     box-shadow: none;
     box-sizing: border-box;
-    color: #fff;
+    color: #1E1E1E;
     cursor: pointer;
     display: block;
     font-family: 'Roboto', ui-monospace;
@@ -102,7 +109,8 @@
 
 .custom-button:not( :disabled ):active
 {
-    background-color: #A09898;
+    color: #1E1E1E;
+    background-color:  #CBC9C9;
     border-color: #0078d4;
 }
 
@@ -115,7 +123,8 @@
 
 .custom-button-primary
 {
-    background-color: #A09898;
+    color: #1E1E1E;
+    background-color:  #CBC9C9;
     border-color:  #0078d4;
 }
 
@@ -128,7 +137,8 @@
 
 .custom-button-primary:not( :disabled ):active
 {
-    background-color:  #A09898;
+    color: #1E1E1E;
+    background-color:  #CBC9C9;
     border-color: #0078d4;
 }
 
@@ -152,19 +162,22 @@
 
 .custom-button-info
 {
-    background-color: #BBB7B7;
+    color: #1E1E1E;
+    background-color:  #CBC9C9;
     border-color:  #0078d4;
 }
 
 .custom-button-info:not( :disabled ):hover
 {
+    color: #fff;
     background-color: #014075;
     border-color: #168EE9;
 }
 
 .custom-button-info:not( :disabled ):active
 {
-    background-color: #BBB7B7;
+    color: #1E1E1E;
+    background-color: #CBC9C9;
     border-color: #168EE9;
 }
 
@@ -177,12 +190,12 @@
     -webkit-user-select: none;
     align-content: center;
     align-items: center;
-    background-color: #BBB7B7;
+    background-color: #CBC9C9;
     border: 1px solid #0078d4;
     border-radius: 48px;
     box-shadow: none;
     box-sizing: border-box;
-    color: #fff;
+    color: #1E1E1E;
     cursor: pointer;
     display: flex;
     flex-direction: row;
@@ -201,12 +214,15 @@
 
 .custom-button-flat:not( :disabled ):hover
 {
+    color: #fff;
     background-color:  #014075;
     border-color:  #168EE9;
 }
 
 .custom-button-flat.large
 {
+    color: #1E1E1E;
+    background-color:  #CBC9C9;
     border-radius: 56px;
     font-size: 18px;
     line-height: 18px;
@@ -215,6 +231,8 @@
 
 .custom-button-flat.small
 {
+    color: #1E1E1E;
+    background-color:  #CBC9C9;
     border-radius: 42px;
     font-size: 14px;
     line-height: 14px;
@@ -229,18 +247,24 @@
 
 .custom-button-flat img
 {
+    color: #1E1E1E;
+    background-color: transparent;
     height: 20px;
     width: 20px;
 }
 
 .custom-button-flat.small img
 {
+    color: #1E1E1E;
+    background-color: transparent;
     height: 16px;
     width: 16px;
 }
 
 .custom-button-flat.large img
 {
+    color: #1E1E1E;
+    background-color: transparent;
     height: 24px;
     width: 24px;
 }
