--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,13 @@
 *    You can contact me at: terryeppler@gmail.com or eppler.terry@epa.gov
 * </copyright>
 * <summary>
-*   custom.css
+*   custom.css main properties
+*   
+*   background-color: #212020;
+*   image background color - #373737;
+*   color: #D6D2D2;
+*   border: 1px solid #0078d4;
+*
 * </summary>
 **************************************************************************************************/
 .custom-dropdown
