--- a/css/controls.css
+++ b/css/controls.css
@@ -54,7 +54,8 @@
     -webkit-user-select: none;
     align-content: stretch;
     align-items: stretch;
-    background-color:  #CBC9C9;
+    background-color:  #989393;
+    border: 1px solid #0078d4;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -62,7 +63,7 @@
     justify-content: flex-start;
     text-decoration: none;
     user-select: none;
-    color: #1E1E1E;
+    color: #FFF;
 }
 
 .custom-button
@@ -72,12 +73,12 @@
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    background-color:  #CBC9C9;
+    background-color:  #989393;
     border: 1px solid #0078d4;
     border-radius: 2px;
     box-shadow: none;
     box-sizing: border-box;
-    color: #1E1E1E;
+    color: #FFF;
     cursor: pointer;
     display: block;
     font-family: 'Roboto', ui-monospace;
@@ -103,28 +104,29 @@
 
 .custom-button:not( :disabled ):hover
 {
+    color: #fff;
     background-color:  #014075;
     border-color:  #168EE9;
 }
 
 .custom-button:not( :disabled ):active
 {
-    color: #1E1E1E;
-    background-color:  #CBC9C9;
+    color: #fff;
+    background-color:  #989393;
     border-color: #0078d4;
 }
 
 .custom-button:disabled
 {
-    background-color:  #A09898;
+    background-color:  #989393;
     cursor: default;
     opacity: 0.4;
 }
 
 .custom-button-primary
 {
-    color: #1E1E1E;
-    background-color:  #CBC9C9;
+    color: #fff;
+    background-color:  #989393;
     border-color:  #0078d4;
 }
 
@@ -137,8 +139,8 @@
 
 .custom-button-primary:not( :disabled ):active
 {
-    color: #1E1E1E;
-    background-color:  #CBC9C9;
+    color: #fff;
+    background-color:  #989393;
     border-color: #0078d4;
 }
 
@@ -162,8 +164,8 @@
 
 .custom-button-info
 {
-    color: #1E1E1E;
-    background-color:  #CBC9C9;
+    color: #FFF;
+    background-color:  #989393;
     border-color:  #0078d4;
 }
 
@@ -171,14 +173,14 @@
 {
     color: #fff;
     background-color: #014075;
-    border-color: #168EE9;
+    border-color: #0078d4;
 }
 
 .custom-button-info:not( :disabled ):active
 {
-    color: #1E1E1E;
-    background-color: #CBC9C9;
-    border-color: #168EE9;
+    color: #FFF;
+    background-color:  #989393;
+    border-color: #0078d4;
 }
 
 .custom-button-flat
@@ -190,12 +192,12 @@
     -webkit-user-select: none;
     align-content: center;
     align-items: center;
-    background-color: #CBC9C9;
+    background-color:  #989393;
     border: 1px solid #0078d4;
     border-radius: 48px;
     box-shadow: none;
     box-sizing: border-box;
-    color: #1E1E1E;
+    color: #FFF;
     cursor: pointer;
     display: flex;
     flex-direction: row;
@@ -221,8 +223,8 @@
 
 .custom-button-flat.large
 {
-    color: #1E1E1E;
-    background-color:  #CBC9C9;
+    color: #fff;
+    background-color:#989393;
     border-radius: 56px;
     font-size: 18px;
     line-height: 18px;
@@ -231,8 +233,8 @@
 
 .custom-button-flat.small
 {
-    color: #1E1E1E;
-    background-color:  #CBC9C9;
+    color: #FFF;
+    background-color: #989393;
     border-radius: 42px;
     font-size: 14px;
     line-height: 14px;
@@ -247,24 +249,24 @@
 
 .custom-button-flat img
 {
-    color: #1E1E1E;
-    background-color: transparent;
+    color: #FFF;
+    background-color: #989393;
     height: 20px;
     width: 20px;
 }
 
 .custom-button-flat.small img
 {
-    color: #1E1E1E;
-    background-color: transparent;
+    color: #FFF;
+    background-color:  #989393;
     height: 16px;
     width: 16px;
 }
 
 .custom-button-flat.large img
 {
-    color: #1E1E1E;
-    background-color: transparent;
+    color: #FFF;
+    background-color: #989393;
     height: 24px;
     width: 24px;
 }
@@ -278,7 +280,7 @@
 input.custom-textbox,
 textarea.custom-textbox
 {
-    background:  #A09898;
+    background: #989393;
     border: 1px solid #0078d4;
     border-radius: 2px;
     box-sizing: border-box;
