--- a/css/controls.css
+++ b/css/controls.css
@@ -54,8 +54,8 @@
     -webkit-user-select: none;
     align-content: stretch;
     align-items: stretch;
-    background-color:  #989393;
-    border: 1px solid #0078d4;
+    background-color:  #B2B2B2;
+    border: 1px solid #168EE9;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -73,8 +73,8 @@
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    background-color:  #989393;
-    border: 1px solid #0078d4;
+    background-color:  #B2B2B2;
+    border: 1px solid #168EE9;
     border-radius: 2px;
     box-shadow: none;
     box-sizing: border-box;
@@ -106,19 +106,19 @@
 {
     color: #fff;
     background-color:  #014075;
-    border-color:  #168EE9;
+    border: 1px solid #168EE9;
 }
 
 .custom-button:not( :disabled ):active
 {
     color: #fff;
-    background-color:  #989393;
-    border-color: #0078d4;
+    background-color:  #B2B2B2;
+    border: 1px solid #168EE9;
 }
 
 .custom-button:disabled
 {
-    background-color:  #989393;
+    background-color:  #B2B2B2;
     cursor: default;
     opacity: 0.4;
 }
@@ -126,8 +126,8 @@
 .custom-button-primary
 {
     color: #fff;
-    background-color:  #989393;
-    border-color:  #0078d4;
+    background-color:  #B2B2B2;
+    border: 1px solid #168EE9;
 }
 
 .custom-button-primary:not( :disabled ):hover
@@ -140,7 +140,7 @@
 .custom-button-primary:not( :disabled ):active
 {
     color: #fff;
-    background-color:  #989393;
+    background-color:  #B2B2B2;
     border-color: #0078d4;
 }
 
@@ -165,7 +165,7 @@
 .custom-button-info
 {
     color: #FFF;
-    background-color:  #989393;
+    background-color:  #B2B2B2;
     border-color:  #0078d4;
 }
 
@@ -179,7 +179,7 @@
 .custom-button-info:not( :disabled ):active
 {
     color: #FFF;
-    background-color:  #989393;
+    background-color:  #B2B2B2;
     border-color: #0078d4;
 }
 
@@ -192,8 +192,8 @@
     -webkit-user-select: none;
     align-content: center;
     align-items: center;
-    background-color:  #989393;
-    border: 1px solid #0078d4;
+    background-color:  #B2B2B2;
+    border: 1px solid #168EE9;
     border-radius: 48px;
     box-shadow: none;
     box-sizing: border-box;
@@ -218,13 +218,13 @@
 {
     color: #fff;
     background-color:  #014075;
-    border-color:  #168EE9;
+    border: 1px solid #168EE9;
 }
 
 .custom-button-flat.large
 {
     color: #fff;
-    background-color:#989393;
+    background-color:#B2B2B2;
     border-radius: 56px;
     font-size: 18px;
     line-height: 18px;
@@ -234,7 +234,7 @@
 .custom-button-flat.small
 {
     color: #FFF;
-    background-color: #989393;
+    background-color: #B2B2B2;
     border-radius: 42px;
     font-size: 14px;
     line-height: 14px;
@@ -250,7 +250,7 @@
 .custom-button-flat img
 {
     color: #FFF;
-    background-color: #989393;
+    background-color: #B2B2B2;
     height: 20px;
     width: 20px;
 }
@@ -258,7 +258,7 @@
 .custom-button-flat.small img
 {
     color: #FFF;
-    background-color:  #989393;
+    background-color:  #B2B2B2;
     height: 16px;
     width: 16px;
 }
@@ -266,7 +266,7 @@
 .custom-button-flat.large img
 {
     color: #FFF;
-    background-color: #989393;
+    background-color: #B2B2B2;
     height: 24px;
     width: 24px;
 }
@@ -280,7 +280,7 @@
 input.custom-textbox,
 textarea.custom-textbox
 {
-    background: #989393;
+    background: #B2B2B2;
     border: 1px solid #0078d4;
     border-radius: 2px;
     box-sizing: border-box;
@@ -294,12 +294,16 @@ textarea.custom-textbox
 
 input.custom-textbox
 {
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
     max-height: 37px;
     min-height: 37px;
 }
 
 textarea.custom-textbox
 {
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
     max-height: 200px;
     min-height: 60px;
 }
@@ -307,7 +311,8 @@ textarea.custom-textbox
 input[ readonly ].custom-textbox,
 textarea[ readonly ].custom-textbox
 {
-    background: #A09898;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
     cursor: default;
 }
 
