--- a/css/frame.css
+++ b/css/frame.css
@@ -39,7 +39,7 @@
 *   
 *   background-color: #212020;
 *   image background color - #373737;
-*   color: #D6D2D2;
+*   color: #FFF;
 *   border: 1px solid #0078d4;
 *
 * </summary>
@@ -47,8 +47,8 @@
 html,
 body
 {
-    background-color: #212020;
-    color: #D6D2D2;
+    background-color:#3E3C3C;
+    color: #FFF;
     font-family: 'Roboto';
     left: 0;
     margin: 0;
@@ -127,7 +127,7 @@ li ul
 
 hr
 {
-    background-color: #212020;
+    background-color:#3E3C3C;
     border: 0;
     height: 1px;
     margin: 0 0 10px 0;
@@ -140,7 +140,7 @@ hr
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    background-color: #323232;
+    background-color:#3E3C3C;
     box-shadow: 0 0 4px rgb( 0, 0, 0 ), 0 0 10px rgb( 0, 0, 0 );
     min-width: 300px;
     position: relative;
@@ -177,7 +177,7 @@ hr
 
 .menu .logo a
 {
-    color: #D6D2D2;
+    color: #FFF;
     flex: 1 auto;
     font-family: 'Roboto';
     font-size: 30px;
@@ -223,7 +223,7 @@ hr
     -moz-transition: opacity 0.1s ease-in-out;
     -webkit-transition: opacity 0.1s ease-in-out;
     align-items: center;
-    color: #e3e3e3;
+    color: #FFF;
     display: flex;
     flex: 1 auto;
     font-family: 'Roboto';
@@ -244,7 +244,7 @@ hr
 .menu .menu-items > a:hover,
 .menu .menu-items > div:hover
 {
-    color: #fff;
+    color: #FFF;
     cursor: pointer;
     opacity: 1;
 }
@@ -273,7 +273,7 @@ hr
 
 .menu .menu-items .dropdown i
 {
-    color: #e3e3e3;
+    color: #FFF;
     margin-left: 5px;
 }
 
@@ -282,7 +282,7 @@ hr
     background-color:  #645D5D;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
-    border-top: 3px solid #4287f5;
+    border-top: 3px solid  #0078D4;
     box-shadow: 0 8px 16px 0 #000000;
     box-shadow: 0 8px 16px 0 rgba( 0, 0, 0, 0.2 );
     display: none;
@@ -294,7 +294,7 @@ hr
 
 .menu .menu-items .dropdown .dropdown-content a
 {
-    color: #fff;
+    color: #FFF;
     display: block;
     padding: 10px 20px;
     text-align: left;
@@ -304,7 +304,7 @@ hr
 .menu .menu-items .dropdown .dropdown-content a:hover
 {
     background-color: #014075;
-    color: #fff;
+    color: #FFF;
 }
 
 .menu .menu-items .dropdown .dropdown-content a:last-child:hover
@@ -362,7 +362,7 @@ hr
 
 .banner
 {
-    background-color:  #0C2336;
+    background-color:  #245F8D;
     display: flex;
     font-family: 'Roboto';
     font-size: 16px;
@@ -382,7 +382,7 @@ hr
 
 .banner .banner-table a
 {
-    color: #68A0FA;
+    color: #0078D4;
     text-decoration: none;
 }
 
@@ -396,7 +396,7 @@ hr
 .banner p,
 .banner span
 {
-    color: #fff;
+    color: #FFF;
 }
 
 .banner .flex-item
@@ -441,7 +441,7 @@ hr
 
 .flex-row .flex-item a
 {
-    color: #68A0FA;
+    color: #0078D4;
 }
 
 .flex-row-center
@@ -855,24 +855,24 @@ ol.nested > li:before
 .custom-text-info p,
 .custom-text-info a
 {
-    color: #D6D2D2;
+    color: #FFF;
 }
 
 .custom-text-info a:hover
 {
-    color: #fff;
+    color: #FFF;
 }
 
 .custom-text-primary,
 .custom-text-primary p,
 .custom-text-primary a
 {
-    color: #D6D2D2;
+    color: #FFF;
 }
 
 .custom-text-primary a:hover
 {
-    color: #fff;
+    color: #FFF;
 }
 
 .custom-text-danger,
@@ -903,7 +903,7 @@ ol.nested > li:before
 .gallery > a.flex-column,
 .gallery > div.flex-column
 {
-    color: #D6D2D2;
+    color: #FFF;
     cursor: default;
     padding: 15px;
     text-decoration: none;
@@ -957,7 +957,7 @@ ol.nested > li:before
     border: 5px solid transparent;
     box-sizing: border-box;
     break-inside: avoid;
-    color: #D6D2D2;
+    color: #FFF;
     cursor: default;
     display: flex;
     flex-direction: column;
@@ -973,10 +973,10 @@ ol.nested > li:before
 
 .masonry figure.selected
 {
-    -moz-box-shadow: inset 0 0 4px 1px #6d6d6d;
-    -webkit-box-shadow: inset 0 0 4px 1px #6d6d6d;
+    -moz-box-shadow: inset 0 0 4px 1px #B2B2B2;
+    -webkit-box-shadow: inset 0 0 4px 1px #B2B2B2;
     border: 5px solid #0078d4;
-    box-shadow: inset 0 0 4px 1px #6d6d6d;
+    box-shadow: inset 0 0 4px 1px #B2B2B2;
 }
 
 .masonry figure > img,
@@ -998,7 +998,7 @@ ol.nested > li:before
     background-color: transparent;
     bottom: max( min( 2vw, 20px ), 15px );
     box-sizing: border-box;
-    color:  #D6D2D2;
+    color:  #FFF;
     display: block;
     font-family: 'Roboto';
     font-size: 25px;
@@ -1025,7 +1025,7 @@ ol.nested > li:before
 
 .masonry figure > figcaption.text-bottom
 {
-    color:  #D6D2D2;
+    color:  #FFF;
     font-family: 'Roboto';
     font-size: 16px;
     font-weight: normal;
@@ -1038,7 +1038,7 @@ ol.nested > li:before
 {
     background-color: #0243ab;
     box-sizing: border-box;
-    color: #D6D2D2;
+    color: #FFF;
     display: block;
     font-family: 'Roboto';
     font-size: 14px;
@@ -1055,7 +1055,7 @@ ol.nested > li:before
 
 .masonry figure > div > a
 {
-    color: #D6D2D2;
+    color: #FFF;
     cursor: alias;
     font-family: 'Roboto';
     font-size: 14px;
@@ -1117,7 +1117,7 @@ ol.nested > li:before
 
 .custom-survey p.custom-answer-survey
 {
-    background-color: #6F6969;
+    background-color: #B2B2B2;
     border: 1px solid  #0078d4;
     border-radius: 0;
     box-sizing: border-box;
@@ -1142,9 +1142,10 @@ ol.nested > li:before
 .custom-survey input.custom-textbox-survey,
 .custom-survey textarea.custom-textbox-survey
 {
-    background-color: #6F6969;
+    background-color: #B2B2B2;
     border: 1px solid  #0078d4;
     border-radius: 0;
+    color: #FFF;
     box-sizing: border-box;
     font-family: 'Roboto';
     font-size: 18px;
@@ -1162,12 +1163,17 @@ ol.nested > li:before
 .custom-survey input[ readonly ].custom-textbox-survey,
 .custom-survey textarea[ readonly ].custom-textbox-survey
 {
-    background-color: #6F6969;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
+    color: #FFF;
     cursor: default;
 }
 
 .custom-survey .custom-radio-group-survey
 {
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
+    color: #FFF;
     column-count: 1;
     column-fill: balance;
     column-gap: 0;
@@ -1206,9 +1212,8 @@ ol.nested > li:before
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    background-color: #6F6969;
+    background-color: #B2B2B2;
     border: 1px solid  #0078d4;
-    border: 0;
     color: #FFF;
     cursor: pointer;
     display: grid;
@@ -1237,8 +1242,8 @@ ol.nested > li:before
     -webkit-user-select: none;
     align-content: stretch;
     align-items: stretch;
-    background-color: #6F6969;
-    border: 0;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
     box-sizing: border-box;
     break-inside: avoid;
     color: #FFF;
@@ -1275,7 +1280,6 @@ ol.nested > li:before
 .custom-survey .custom-radio-group-survey input[ type = "radio" ] + label > figure > figcaption,
 .custom-survey .custom-radio-group-survey input[ type = "checkbox" ] + label > figure > figcaption
 {
-    background-color: transparent;
     bottom: max( min( 2vw, 10px ), 5px );
     box-sizing: border-box;
     color: #FFF;
@@ -1298,7 +1302,6 @@ ol.nested > li:before
 .custom-survey .custom-radio-group-survey input[ type = "radio" ] + label > figure > figcaption.text-only,
 .custom-survey .custom-radio-group-survey input[ type = "checkbox" ] + label > figure > figcaption.text-only
 {
-    background-color: transparent;
     padding: 25px 25px;
     position: initial;
     text-shadow: none;
@@ -1307,8 +1310,8 @@ ol.nested > li:before
 .custom-survey .custom-radio-group-survey input[ type = "radio" ] + label > figure > div,
 .custom-survey .custom-radio-group-survey input[ type = "checkbox" ] + label > figure > div
 {
-    background-color: #6F6969;
     box-sizing: border-box;
+    border:  1px solid  #0078d4;
     color: #FFF;
     display: block;
     font-family: 'Roboto';
@@ -1325,7 +1328,7 @@ ol.nested > li:before
 .custom-survey .custom-radio-group-survey input[ type = "radio" ] + label > figure > div > a,
 .custom-survey .custom-radio-group-survey input[ type = "checkbox" ] + label > figure > div > a
 {
-    color: #e3e3e3;
+    color: #FFF;
     cursor: alias;
     font-family: 'Roboto';
     font-size: 14px;
@@ -1335,8 +1338,6 @@ ol.nested > li:before
 .custom-survey .custom-radio-group-survey input[ type = "radio" ]:not( :disabled ):hover,
 .custom-survey .custom-radio-group-survey input[ type = "checkbox" ]:not( :disabled ):hover
 {
-    background-color: #6F6969;
-    border: 1px solid  #0078d4;
     color: #FFF;
 }
 
@@ -1354,8 +1355,8 @@ ol.nested > li:before
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    background-color: #6F6969;
-    border: 0;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
     border-spacing: 0;
     box-shadow: none;
     box-sizing: border-box;
@@ -1374,15 +1375,12 @@ ol.nested > li:before
 .custom-survey .custom-radio-group-survey input[ type = "radio" ]:checked + label,
 .custom-survey .custom-radio-group-survey input[ type = "checkbox" ]:checked + label
 {
-    background-color: #0078d4;
     color: #fff;
 }
 
 .custom-survey .custom-radio-group-survey input[ type = "radio" ] + label:before,
 .custom-survey .custom-radio-group-survey input[ type = "checkbox" ] + label:before
 {
-    background: #6F6969;
-    border: 1px solid #0078d4;
     content: '';
     height: 20px;
     left: 14px;
@@ -1446,7 +1444,8 @@ ol.nested > li:before
 
 .custom-survey
 {
-    background-color:  #6F6969;
+    background-color: #B2B2B2;
+    color: #FFF;
     border: 1px solid #0078d4;
     border-radius: 0;
     display: flex;
@@ -1457,7 +1456,7 @@ ol.nested > li:before
 
 .custom-survey .text
 {
-    color: #fff;
+    color: #FFF;
     margin-bottom: 0;
     margin-top: 0;
 }
@@ -1469,31 +1468,39 @@ ol.nested > li:before
 
 .custom-survey .custom-textbox-survey
 {
-    background-color:  #6F6969;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
     color: #FFF;
 }
 
 .custom-survey textarea.custom-textbox-survey::-webkit-input-placeholder
 {
     /* Edge */
-    color: #6F6969;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
+    color: #FFF;
 }
 
 .custom-survey textarea.custom-textbox-survey:-ms-input-placeholder
 {
     /* Internet Explorer */
-    color: #6F6969;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
+    color: #FFF;
 }
 
 .custom-survey textarea.custom-textbox-survey::placeholder
 {
-    color: #6F6969;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
+    color: #FFF;
 }
 
 .custom-survey.answer-mode
 {
-    background-color: #6F6969;
+    background-color: #B2B2B2;
     border: 1px solid #0078d4;
+    color: #FFF;
 }
 
 .custom-survey.answer-mode .custom-radio-group-survey input[ type = "radio" ] + label,
@@ -1505,27 +1512,28 @@ ol.nested > li:before
 .custom-survey.answer-mode .custom-radio-group-survey input[ type = "radio" ]:not( .highlight ) + label,
 .custom-survey.answer-mode .custom-radio-group-survey input[ type = "checkbox" ]:not( .highlight ):checked + label
 {
-    background-color: #6F6969;
-    color: #e1e1e1;
+    background: #B2B2B2;
+    border: 1px solid #0078d4;
+    color: #FFF;
 }
 
 .custom-survey.answer-mode .custom-radio-group-survey input[ type = "radio" ].highlight + label,
 .custom-survey.answer-mode .custom-radio-group-survey input[ type = "checkbox" ].highlight + label
 {
-    background-color: #6F6969;
+    background-color: #B2B2B2;
     box-shadow: 0 0 0 5px white inset;
     color: #fff;
 }
 
 .custom-survey.answer-mode .custom-textbox-survey
 {
-    color:  #6F6969;
-    background: #e1e1e1;
+    color: #B2B2B2;
+    background: #FFF;
 }
 
 .custom-survey.answer-mode .custom-textbox-survey:disabled
 {
-    background: #6F6969;
+    background: #B2B2B2;
 }
 
 .no-top-margin
