--- a/css/widgets.css
+++ b/css/widgets.css
@@ -39,7 +39,7 @@
 *   
 *   background-color: #212020;
 *   image background color - #373737;
-*   color: #D6D2D2;
+*   color: #FFF;
 *   border: 1px solid #0078d4;
 *
 * </summary>
@@ -331,7 +331,7 @@
     -webkit-user-select: none;
     border: 1px solid  #0078d4;
     border-radius: 2px;
-    color:  #D6D2D2;
+    color:  #FFF;
     cursor: pointer;
     display: table-cell;
     font-family: 'Roboto' -webkit-touch-callout:none;
@@ -352,12 +352,12 @@
 {
     background-color: #014075;
     border-color:  #0078d4;
-    color:  #D6D2D2;
+    color:  #FFF;
 }
 
 .custom-radio [ type = "radio" ] + label:before
 {
-    background-color:   #3E3D3D;
+    background-color: #B2B2B2;
     border: 1px solid #0078d4;
     border-radius: 100%;
     content: '';
@@ -398,7 +398,7 @@
 
 .custom-dropdown
 {
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #3E3D3D;
     border: 1px solid  #0078d4;
     -khtml-user-select: none;
@@ -414,7 +414,7 @@
 
 .custom-dropdown > a
 {
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #3E3D3D;
     border: 1px solid  #0078d4;
     border-radius: 2px;
@@ -434,7 +434,7 @@
 {
     height: 37px;
     padding: 5px 31px 5px 10px;
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #3E3D3D;
     border: 1px solid  #0078d4;
 }
@@ -448,7 +448,7 @@
     text-align: left;
     text-overflow: ellipsis;
     white-space: nowrap;
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #3E3D3D;
 }
 
@@ -456,13 +456,13 @@
 {
     font-size: 16px !important;
     line-height: 25px;
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #3E3D3D;
 }
 
 .custom-dropdown > a:after
 {
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:  #3E3D3D;
     border: 4px solid  #0078d4;
     border-top-color:  #0078d4;
@@ -476,7 +476,7 @@
 
 .custom-dropdown.large > a:after
 {
-    color:  #D6D2D2;
+    color: #FFF;
     background-color: #3E3D3D;
     border: 5px solid  #0078d4;
     border-top-color:  #0078d4;
@@ -486,7 +486,7 @@
 
 .custom-dropdown > div
 {
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #3E3D3D;
     border: 1px solid  #0078d4;
     border-radius: 2px;
@@ -524,7 +524,7 @@
     border-right: 0;
     border-top: 0;
     box-sizing: border-box;
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #414141;
     display: block;
     font-size: 14px !important;
@@ -539,7 +539,7 @@
 
 .custom-dropdown.large > div > a
 {
-    color:  #D6D2D2;
+    color:  #FFF;
     background-color:   #414141;
     font-size: 16px !important;
     height: 35px;
@@ -566,7 +566,7 @@
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    color: #D6D2D2;
+    color: #FFF;
     background-color:   #414141;
     background-image: none;
     border-radius: 2px;
@@ -581,7 +581,7 @@
 .custom-dialog-flat .ui-dialog-content
 {
     border-color: #0078d4;
-    color: #D6D2D2;
+    color: #FFF;
     background-color:  #616161;
     background-image: none;
     padding: 1.6em 1.8em 1.5em 1.8em;
@@ -612,7 +612,7 @@
 
 .custom-dialog-flat .ui-dialog-titlebar
 {
-    color: #D6D2D2;
+    color: #FFF;
     background-color:  #393838;
     background-image: none;
     border: 0;
@@ -623,7 +623,7 @@
 
 .custom-dialog-flat .ui-dialog-titlebar .ui-dialog-title
 {
-    color: #D6D2D2;
+    color: #FFF;
     font-family: 'Roboto';
     font-size: 19px;
     margin: 0 0 0 0.5em;
@@ -632,7 +632,7 @@
 
 .custom-dialog-flat .ui-dialog-titlebar .ui-dialog-titlebar-close
 {
-    color: #D6D2D2;
+    color: #FFF;
     background-color:  #393838;
     border: 0;
     margin: 0;
@@ -661,7 +661,7 @@
 
 .custom-dialog-flat .ui-dialog-titlebar .ui-dialog-titlebar-close.ui-state-default
 {
-    color: #D6D2D2;
+    color: #FFF;
     background-color:#616161;
     border: none;
     height: auto;
@@ -681,10 +681,10 @@
 
 .custom-dialog-flat .ui-dialog-buttonpane
 {
-    color: #D6D2D2;
-    background-color:   #393838;
-    border-color: #414141;
-    border-top: 1px solid #414141;
+    color: #FFF;
+    background-color: #B2B2B2;
+    border-color:#0078d4;
+    border-top: 1px solid #0078d4;
     border-width: 1px;
     margin: 0;
     padding: 0 1.8em 1.2em 1.8em
@@ -705,10 +705,10 @@
 
 .custom-dialog-flat .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button
 {
-    background:#616161;
-    border-color:#616161;
+    background: #B2B2B2;
+    border-color:#0078d4;
     border-radius: 2px;
-    color:  #D6D2D2;
+    color:  #FFF;
     font-family: 'Roboto';
     margin: 1.2em 0 0 1.2em;
     outline: none;
@@ -727,7 +727,7 @@
 
 .custom-dialog-flat .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button.ui-action-button
 {
-    background-color: #616161;
+    background-color:#B2B2B2;
 }
 
 .custom-dialog-flat .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button.full-width
@@ -868,7 +868,7 @@
 
 .ui-widget-overlay
 {
-    background-color: #212020;
+    background-color:#3E3C3C;
     background-image: none;
     opacity: 0.7;
 }
