--- a/css/frame.css
+++ b/css/frame.css
@@ -1,16 +1,16 @@
 ﻿/**************************************************************************************************
 *     File Name:               frame.css
-*     Assembly:                Budget Execution
+*     Assembly:                Orca
 *     Author:                  Terry D. Eppler
 *     Created:                 03-24-2023
 * 
 *     Last Modified By:        Terry D. Eppler
-*     Last Modified On:        05-31-2023
+*     Last Modified On:        05-31-2024
 *
 * <copyright file="frame.css" company="Terry Eppler">
-*    This is a Federal Budget, Finance, and Accounting application for the
-*    US Environmental Protection Agency (US EPA).
-*    Copyright ©  2023  Terry Eppler
+*    Orca is a quick and dirty HTML, CSS, and JS website template used in a 
+*    Budget Execution & Data Analysis application for EPA analysts
+*    Copyright ©  2024  Terry Eppler
 * 
 *    Permission is hereby granted, free of charge, to any person obtaining a copy
 *    of this software and associated documentation files (the “Software”),
